# asv-subtools

./: .gitignore  .gitmodules  README.md  addPrefixForUttID.sh  augmentDataByNoise.sh  bin  clear.sh  clear_sh.swp  combineVectordir.sh  computeAugmentedVad.sh  computeCavg.py  computeCavg_unknown.py  computeEER-like-Bosaris.py  computeEER.sh  computeMin-t-DCF.py  computeVad.sh  concatSpFeats.sh  correctSpeakerAfterSp3way.sh  createVisualVad.sh  cutUttRandomFromFeats.sh  extractVector.sh  filterDataDir.sh  filterVectorDir.sh  fusionByLda.sh  fusionBySvm.py  getAugmentedScp.sh  getScoreScp.sh  getTrials.sh  get_utt2gender.sh  get_utt2num_frames_from_feats.sh  get_utt2num_frames_from_vad.sh  grabLossValue.sh  greedyFusion.sh  makeFeatures.sh  meanSpVector.sh  newCopyData.sh  pasteFeats.sh  pasteRawfeatsAndPhoneticEmbedding.sh  path.sh  prepareDatadirForTest.sh  (+13 more)
.history/: path_20221112112309.sh  path_20221112114552.sh  path_20221112122243.sh
conf/: asvspoof-fbank-160.conf  asvspoof-mfcc-40.conf  asvspoof-pitch.conf  asvspoof-plp-40.conf  asvspoof-spectrogram.conf  egs_pre_sre.yaml  egs_pre_sre_concat.yaml  egs_pre_sre_ecapa.yaml  egs_pre_sre_ecapa1.yaml  egs_pre_sre_lm.yaml  egs_pre_sre_transformer.yaml  speech_aug_chain.yaml  speech_aug_concat.yaml  speech_aug_ecapa.yaml  speech_aug_lm.yaml  speech_aug_random.yaml  speech_aug_transformer.yaml  sre-fbank-40.conf  sre-fbank-80.conf  sre-fbank-81.conf  sre-mfcc-20.conf  sre-mfcc-23.conf  sre-plp-20.conf  vad-5.0.conf
doc/papers/: conformer.md
kaldi/: runDoubleXvector.sh  runIvector.sh  runMultiTaskXvector.sh  runPhoneticXvector.sh  runTransferXvector.sh  runXnetXvector.sh  runXvector.sh  runYnetXvector.sh
kaldi/draw/: drawDETCurve.py  drawLossCurve.py
kaldi/patch/: runPatch-GPU.sh  runPatch-base-command.sh  runPatch-multitask.sh  runPatch-utils-steps.sh  trainingControl.code
kaldi/sid/: compute_vad_decision.sh  compute_vad_decision_gmm.sh  extract_ivectors.sh  extract_ivectorsOld.sh  extract_ivectors_cvn.sh  extract_ivectors_dnn.sh  gender_id.sh  get_vtln_warps.sh  init_full_ubm_from_dnn.sh  music_id.sh  run_logistic_regression.sh  train_diag_ubm.sh  train_diag_ubm_cvn.sh  train_full_ubm.sh  train_full_ubm_cvn.sh  train_ivector_extractor.sh  train_ivector_extractor_cvn.sh  train_ivector_extractor_dnn.sh  train_lvtln_model.sh
kaldi/steps/: align_basis_fmllr.sh  align_basis_fmllr_lats.sh  align_fmllr.sh  align_fmllr_lats.sh  align_lvtln.sh  align_raw_fmllr.sh  align_sgmm2.sh  align_si.sh  append_feats.sh  best_path_weights.sh  combine_lat_dirs.sh  compare_alignments.sh  compute_cmvn_stats.sh  compute_vad_decision.sh  copy_ali_dir.sh  copy_lat_dir.sh  decode.sh  decode_basis_fmllr.sh  decode_biglm.sh  decode_combine.sh  decode_fmllr.sh  decode_fmllr_extra.sh  decode_fmmi.sh  decode_fromlats.sh  decode_lvtln.sh  decode_nnet.sh  decode_nolats.sh  decode_raw_fmllr.sh  decode_sgmm2.sh  decode_sgmm2_fromlats.sh  decode_sgmm2_rescore.sh  decode_sgmm2_rescore_project.sh  decode_with_map.sh  get_ctm.sh  get_ctm_conf.sh  get_ctm_conf_fast.sh  get_ctm_fast.sh  get_fmllr_basis.sh  get_lexicon_probs.sh  get_prons.sh  (+49 more)
kaldi/utils/: build_const_arpa_lm.sh  convert_slf.pl  convert_slf_parallel.sh  copy_data_dir.sh  create_data_link.pl  create_split_dir.pl  dict_dir_add_pronprobs.sh  filter_scp.pl  filter_scps.pl  format_lm.sh  format_lm_sri.sh  gen_topo.pl  make_lexicon_fst.pl  make_lexicon_fst_silprob.pl  map_arpa_lm.pl  mkgraph.sh  pbs.pl  prepare_extended_lang.sh  prepare_online_nnet_dist_build.sh  remove_data_links.sh  rnnlm_compute_scores.sh  segmentation.pl  show_lattice.sh  slurm.pl  split_data.sh  ssh.pl  validate_lang.pl  validate_text.pl  write_kwslist.pl
linux/: decode_symbolic_link.sh  functions.sh  generate_html_table_for_markdown.sh  kill_pid_tree.sh
linux/base/: check_cpu_info.sh  check_system_info.sh
pytorch/fastai/: egs.py  readme.txt
pytorch/launcher/: runEcapaXvector.py  runEcapaXvector_online.py  runEcapaXvector_roadmap.py  runEtdnn-FD-AL-trainer.py  runFactoredXvector.py  runLaunc.swl  runLaunc.swm  runLaunc.swn  runLaunc.swo  runLauncher.sh  runMultiTaskXvector.py  runRepvggXvector.py  runResnetXvector.py  runResnetXvector_online.py  runSnowdarXvector-ap.py  runSnowdarXvector-multi-GPU.py  runSnowdarXvector-multi-gpu.py  runSnowdarXvector-voxceleb1.py  runSnowdarXvector-voxceleb2.py  runSnowdarXvector.py  runSnowdar_Xivector.py  runTransformerXvector.py  runTransformerXvector_LM.py  runXvector.py
pytorch/model/: ecapa-tdnn-xvector.py  ecapa_tdnn_xvector.py  extended-xvector.py  extended_xvector.py  factored-xvector.py  factored_xvector.py  multi-task-xvector-fix.py  multi_task_xvector_fix.py  repvgg_xvector.py  resnet-xvector.py  resnet_xvector.py  snowdar-xvector-FD-AL.py  snowdar-xvector.py  snowdar_xvector.py  transformer-xvector.py  transformer_xvector.py  xvector.py
pytorch/pipeline/: export_jit_model.sh  extract_xvectors_for_pytorch.sh  extract_xvectors_for_pytorch_new.sh  preprocess_to_egs.sh  (+1 more)
runtime/: CMakeLists.txt  README.md  test.sh
runtime/cmake/: boost.cmake  gflags.cmake  glog.cmake  gtest.cmake  libtorch.cmake  yaml.cmake
runtime/extractor/: params.h  torch_asv_extractor.cc  torch_asv_extractor.h  torch_asv_model.cc  torch_asv_model.h
runtime/frontend/: feature-itf.h  feature_pipeline.cc  feature_pipeline.h  features.cc  features.h  wav.h
runtime/kaldifeat/: CMakeLists.txt
runtime/kaldifeat/csrc/: CMakeLists.txt  feature-common-inl.h  feature-common.h  feature-fbank.cc  feature-fbank.h  feature-functions.cc  feature-functions.h  feature-mfcc.cc  feature-mfcc.h  feature-plp.cc  feature-plp.h  feature-spectrogram.cc  feature-spectrogram.h  feature-window-test.cc  feature-window.cc  feature-window.h  log.h  matrix-functions.cc  matrix-functions.h  mel-computations.cc  mel-computations.h  pitch-functions.h  test_kaldifeat.cc
runtime/test/: feat_conf.yaml  gen_jit.py  test.sh  wav.scp
runtime/test/wav/: wav.scp
runtime/utils/: blocking_queue.h  options.cc  options.h  string.cc  string.h  timer.h  utils.cc  utils.h
score/: ScoreNormalization.py  process.sh  score.sh
(+615 files in other folders)
